# jinja2-fastapi-users

./: LICENSE.txt  README.md  pyproject.toml  requirements.txt  test1.db
src/: app.py
src/classes/: keyword.py
src/controllers/: const.py  festivalAwardPart.py  festivalAwardTH.py  festivalAwardTM.py  keyword.py  logs.py  maker.py  media.py  model.py
src/core/: sql_db.py
src/jinja2_fastapi_users/: __about__.py  __init__.py
src/models/: Const.py  Const_TM.py  FestivalAwards_Part.py  FestivalAwards_TH.py  FestivalAwards_TM.py  Keyword_TM.py  Maker_TM.py  MediaMetadata.py  Media_TM.py  Model_tm.py  db.py  lite_db.py  sql_db.py
src/routers/: auth.py  awards1.py  awards2.py  keyword.py  model.py  user.py
src/static/: config.py  const.py  post_Interfaces.py  utils.py
static/: base.css  components.css  layout.css  style.css  style1.css  style2.css
templates/: awards1.html  awards2.html  base.html  header.html  keyword.html  logs.html  main.html  model.html  nav.html  signin.html  signup.html
